package Entidades;

import java.io.Serializable;

public enum Color implements Serializable {
    RED,
    YELLOW,
    ORANGE,
    BROWN;
}
