package Entidades;

import java.io.Serializable;

public enum MpaaRating implements Serializable {
    G,
    PG,
    PG_13,
    R,
    NC_17;
}
